# mini-quant-trading-engine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: ci.yml
Performance/: CMakeLists.txt
Performance/code/: main.cpp
Performance/code/include/Benchmark/: Benchmark.hpp  BenchmarkRunner.hpp  MarketDataBenchmark.hpp  MetricsExporter.hpp  OrderBookBenchmark.hpp  OrderMatchingBenchmark.hpp  StrategyBenchmark.hpp
Performance/code/src/Benchmark/: Benchmark.cpp  BenchmarkRunner.cpp  MarketDataBenchmark.cpp  MetricsExporter.cpp  OrderBookBenchmark.cpp  OrderMatchingBenchmark.cpp  StrategyBenchmark.cpp
Performance/graphs/: main.py
Performance/graphs/src/: GenGraph.py
Performance/results/performance/: OrderMatchingLatencies.csv  StrategyLatencies.csv  benchmark_results.csv
Tests/: CMakeLists.txt  orderMatchingStrategy.cpp  orderbook.cpp  tickQueue.cpp  tradingStrategy.cpp
app/data/mock_data/: MeanReversionStrategyTest.csv
app/include/MarketDataHandler/: MarketDataReader.hpp  MarketTick.hpp  Stock.hpp  ThreadSafeTickQueue.hpp
app/include/OrderBook/: OrderBook.hpp
app/include/OrderMatchingStrategy/: OrderMatchingStrategy.hpp  PriceTimeOrderMatchingStrategy.hpp
app/include/Orders/: LimitOrder.hpp  LimitOrderFactory.hpp  MarketOrder.hpp  MarketOrderFactory.hpp  Order.hpp  OrderFactory.hpp  OrderType.hpp
app/include/Trader/: MeanReversionStrategy.hpp  Trader.hpp  TradingStrategy.hpp
app/include/Utils/: Logger.hpp
app/src/MarketDataHandler/: MarketDataReader.cpp  MarketTick.cpp  Stock.cpp
app/src/OrderBook/: OrderBook.cpp
app/src/OrderMatchingStrategy/: OrderMatchingStrategy.cpp  PriceTimeOrderMatchingStrategy.cpp
app/src/Orders/: LimitOrder.cpp  LimitOrderFactory.cpp  MarketOrder.cpp  MarketOrderFactory.cpp  Order.cpp  OrderFactory.cpp
app/src/Trader/: MeanReversionStrategy.cpp  Trader.cpp  TradingStrategy.cpp
app/src/Utils/: Logger.cpp
